React dynamic component rendering

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,11 @@
-.container {
+.contact_adder {
+  background: #ccc;
+  padding: 1rem;
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.contact_list {
   background: #ccc;
   padding: 1rem;
   margin: 5px;
