--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,8 +1,44 @@
+* {
+  font-family: "Playwrite DE Grund", cursive;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.nav_bar {
+  background: #27464f;
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  padding: 20px;
+}
+
 .contact_adder {
   background: #ccc;
   padding: 1rem;
   margin: 5px;
   border-radius: 5px;
+}
+
+input {
+  border: 0;
+  padding: 10px;
+  margin: 2px;
+  border-radius: 10px;
+  outline: none;
+}
+
+button {
+  border: 0;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+  outline: none;
+  background: #27464f;
+  color: #fff;
+  cursor: pointer;
 }
 
 .contact_list {
